--- a/server.config
+++ b/server.config
@@ -1,1 +1,1 @@
-{"serverAddr":["https://www.xx.com","https://www.cc.com"]}
+{"serverAddr":["https://www.xx.com","https://www.cc.com","https://abc.com"]}
