--- a/sys_config.json
+++ b/sys_config.json
@@ -1,1 +1,1 @@
-{"serverAddr":["https://www.xx.com","https://www.cc.com","https://abc.com"]}
+{"serverAddr":["http://127.0.0.1:8202","https://www.cc.com","https://abc.com"]}
